# fpexif

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CANON_PARITY_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXIFTOOL.md  EXIFTOOL_JSON_COMPARISON.md  EXIV2.md  LICENSE-MIT  MACRO_USAGE_EXAMPLE.md  MACRO_VERIFICATION.md  MAKERNOTES.md  PARITY_CANON_50D.md  PARITY_CANON_S90.md  PARITY_FUJI_X30.md  PARITY_FUJI_X70.md  PARITY_NIKON_D300.md  PARITY_STANDARD_EXIF.md  PLAN-canon-improvements.md  PLAN-dng-improvements.md  PLAN-fujifilm-improvements.md  PLAN-kodak-improvements.md  PLAN-minolta-improvements.md  PLAN-nikon-improvements.md  PLAN-nikon-lensdata-decryption.md  PLAN-olympus-improvements.md  PLAN-panasonic-improvements.md  PLAN-pentax-improvements.md  PLAN-samsung-improvements.md  PLAN-sigma-improvements.md  PLAN-sony-improvements.md  PLAN_IFD_MULTI_SUPPORT.md  README.md  SONY_AFSTATUS_ANALYSIS.md  TODO.md  UNSUPPORTED_TAGS.md  WASM_COMPATIBILITY.md  build-wasm.sh  (+7 more)
.claude/: settings.local.json
.claude/agents/: canon-exif-worker.md  dng-exif-expert.md  fujifilm-exif-expert.md  kodak-exif-expert.md  minolta-exif-expert.md  nikon-exif-expert.md  olympus-exif-expert.md  panasonic-exif-expert.md  sigma-exif-expert.md  sony-exif-expert.md
.claude/commands/: check-libs.md  go-on.md  restart-auto.md  tag-next.md  tax-next.md
.github/workflows/: ci.yml  release.yml
.mfr-baselines/: .gitignore
analysis/: CANON_ANALYSIS.md  FUJIFILM_ANALYSIS.md  NIKON_ANALYSIS.md  PANASONIC_ANALYSIS.md  PANASONIC_IMPLEMENTATION_REPORT.md  SONY_ANALYSIS.md  SONY_IMPLEMENTATION_REVIEW.md
docs/: MULTI_IFD_FORMATS.md
examples/: README.md  demo.html  extract-essential-tags.ts  macro_demo.rs  package.json  quick-start.ts  test_macro_decoders.rs  usage-examples.ts
examples/wasm-demo/: index.html  serve.sh
roadmap/: EXIFTOOL.md
scripts/: pr-comment.ts  tag-diff.ts
src/: data_types.rs  errors.rs  extract.rs  io.rs  lib.rs  macros.rs  output.rs  parser.rs  tags.rs  wasm.rs
src/examples/: extract_gps.rs
src/formats/: avif.rs  ciff.rs  cr3.rs  crw.rs  heif.rs  isobmff.rs  jpeg.rs  jxl.rs  mod.rs  mrw.rs  png.rs  raf.rs  riff.rs  tiff.rs  webp.rs  x3f.rs
src/makernotes/: canon.rs  casio.rs  fuji.rs  hasselblad.rs  kodak.rs  leaf.rs  leica.rs  minolta.rs  mod.rs  nikon.rs  olympus.rs  panasonic.rs  pentax.rs  phaseone.rs  samsung.rs  sigma.rs  sony.rs
src/mfr_test/: baseline.rs  comparison.rs  mod.rs  output.rs
test-data/: .gitignore  DSCF0062.json  RAW_CANON_50D.json  RAW_CANON_S90.json  RAW_FUJI_X30.json  RAW_NIKON_D300.json  README.md  download-samples.sh
tests/: canon_makernotes_test.rs  comprehensive_filesize_test.rs  error_handling_test.rs  essential_tags_cross_format_test.rs  essential_tags_test.rs  exiftool_json_comparison.rs  exiftool_text_comparison.rs  exiv2_comparison.rs  file_size_formatting_test.rs  filesize_across_manufacturers_test.rs  format_tests.rs  fuji_makernotes_test.rs  integration_test.rs  nikon_makernotes_test.rs  real_file_exiftool_tests.rs  real_file_test.rs  sony_makernotes_test.rs  test_results.rs  wasm_test.ts
