[package]
name = "fpexif"
version = "0.1.0"
edition = "2021"
authors = ["pgray <pgray@file.photo>"]
description = "A pure Rust library for parsing EXIF metadata from 23+ image formats including JPEG, PNG, WebP, AVIF, HEIC, RAW"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pgray/fpexif"
keywords = ["exif", "metadata", "image", "raw", "photography"]
categories = ["multimedia::images", "parser-implementations"]

[dependencies]
# For hex encoding (used for displaying undefined data)
hex = "0.4"
# For buffered reading (could be optional)
byteorder = "1.4"
# For human-readable display of tags
chrono = "0.4"
# Optional: for command line interface
clap = { version = "4.0", optional = true, features = ["derive"] }
# Optional: for WebAssembly bindings
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
cli = ["clap", "serde", "serde_json"]
wasm = ["wasm-bindgen", "serde", "serde-wasm-bindgen", "serde_json"]

[[bin]]
name = "fpexif"
path = "src/bin/cli.rs"
required-features = ["cli"]

[lib]
name = "fpexif"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
