[package]
name = "fpexif"
version = "0.0.1"
edition = "2024"
authors = ["pgray <pgray@file.photo>"]
description = "A pure Rust library for parsing EXIF metadata from 23+ image formats including JPEG, PNG, WebP, AVIF, HEIC, RAW"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pgray/fpexif"
keywords = ["exif", "metadata", "image", "raw", "photography"]
categories = ["multimedia::images", "parser-implementations"]

[dependencies]
# For hex encoding (used for displaying undefined data)
hex = "0.4"
# For endian-aware binary reading
byteorder = "1.4"
# For better error handling
thiserror = "1.0"
# For macro token pasting
paste = "1.0"
# Optional: for command line interface
clap = { version = "4.0", optional = true, features = ["derive"] }
# Optional: for WebAssembly bindings
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
# Optional: for base64 encoding in WASM JPEG extraction
base64 = { version = "0.22", optional = true }

[features]
default = []
cli = ["clap", "serde", "serde_json"]
wasm = ["wasm-bindgen", "serde", "serde-wasm-bindgen", "serde_json", "base64"]
serde = ["dep:serde"]

[[bin]]
name = "fpexif"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "mfr-test"
path = "src/bin/mfr_test.rs"
required-features = ["cli"]

[lib]
name = "fpexif"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
